修改图片布局方式

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="keywords" content="" />
 	<script type="application/x-javascript">
-		addEventListener("load", function () {
-			setTimeout(hideURLbar, 0);
-		}, false);
+		// addEventListener("load", function () {
+		// 	setTimeout(hideURLbar, 0);
+		// }, false);
 
-		function hideURLbar() {
-			window.scrollTo(0, 1);
-		}
+		// function hideURLbar() {
+		// 	window.scrollTo(0, 1);
+		// }
 	</script>
 	<!--//tags -->
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -152,59 +152,31 @@
 							<div class="respon_info_img">
 								<img src="images/banner3.jpg" class="img-responsive" alt="PhotoCall">
 							</div>
-							<div class="banner_bottom_left">
-								<!-- <h4>Wedding Photography</h4> -->
-
-								<p>Baoji Longda Jiaye Industry and Trade Co., Ltd. was established in 2019 and is located in Baoji City,
-									Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has
-									developed into an innovative enterprise integrating production and trade. The company specializes in
-									the production of titanium alloy materials and tungsten, molybdenum, tantalum, niobium, nickel,
-									zirconium and other rare metals. Our products include bar, plate, pipe, wire, powder, foil, fasteners
-									and customized machining parts. According to GB/T, ASTM/B, ASME SB, AMS, DIN, JIS and other standards
-									of processing. The products are widely used in aerospace, medical equipment, automobile, metallurgy,
-									electronics, ceramics and petrochemical industries. Products have been exported to the United States,
-									Canada, Brazil, Japan, South Korea, Germany, Britain, Australia, Southeast Asia and other countries
-									and regions. We rely on good quality and service to win the majority of customers.</p>
-								<!-- <div class="ab_button">
-									<a class="btn btn-primary btn-lg hvr-underline-from-left" href="single.html" role="button">Read More </a>
-								</div> -->
-							</div>
 						</li>
 						<li>
 							<div class="respon_info_img">
 								<img src="images/banner2.jpg" class="img-responsive" alt="PhotoCall">
-							</div>
-							<div class="banner_bottom_left">
-								<p>Baoji Longda Jiaye Industry and Trade Co., Ltd. was established in 2019 and is located in Baoji City,
-									Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has
-									developed into an innovative enterprise integrating production and trade. The company specializes in
-									the production of titanium alloy materials and tungsten, molybdenum, tantalum, niobium, nickel,
-									zirconium and other rare metals. Our products include bar, plate, pipe, wire, powder, foil, fasteners
-									and customized machining parts. According to GB/T, ASTM/B, ASME SB, AMS, DIN, JIS and other standards
-									of processing. The products are widely used in aerospace, medical equipment, automobile, metallurgy,
-									electronics, ceramics and petrochemical industries. Products have been exported to the United States,
-									Canada, Brazil, Japan, South Korea, Germany, Britain, Australia, Southeast Asia and other countries
-									and regions. We rely on good quality and service to win the majority of customers.</p>
 							</div>
 						</li>
 						<li>
 							<div class="respon_info_img">
 								<img src="images/banner1.jpg" class="img-responsive" alt="PhotoCall">
 							</div>
-							<div class="banner_bottom_left">
-								<p>Baoji Longda Jiaye Industry and Trade Co., Ltd. was established in 2019 and is located in Baoji City,
-									Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has
-									developed into an innovative enterprise integrating production and trade. The company specializes in
-									the production of titanium alloy materials and tungsten, molybdenum, tantalum, niobium, nickel,
-									zirconium and other rare metals. Our products include bar, plate, pipe, wire, powder, foil, fasteners
-									and customized machining parts. According to GB/T, ASTM/B, ASME SB, AMS, DIN, JIS and other standards
-									of processing. The products are widely used in aerospace, medical equipment, automobile, metallurgy,
-									electronics, ceramics and petrochemical industries. Products have been exported to the United States,
-									Canada, Brazil, Japan, South Korea, Germany, Britain, Australia, Southeast Asia and other countries
-									and regions. We rely on good quality and service to win the majority of customers.</p>
-							</div>
 						</li>
 					</ul>
+					<div class="banner_bottom_left">
+						<!-- <h4>Wedding Photography</h4> -->
+						<p>Baoji Longda Jiaye Industry and Trade Co., Ltd. was established in 2019 and is located in Baoji City,
+							Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has
+							developed into an innovative enterprise integrating production and trade. The company specializes in
+							the production of titanium alloy materials and tungsten, molybdenum, tantalum, niobium, nickel,
+							zirconium and other rare metals. Our products include bar, plate, pipe, wire, powder, foil, fasteners
+							and customized machining parts. According to GB/T, ASTM/B, ASME SB, AMS, DIN, JIS and other standards
+							of processing. The products are widely used in aerospace, medical equipment, automobile, metallurgy,
+							electronics, ceramics and petrochemical industries. Products have been exported to the United States,
+							Canada, Brazil, Japan, South Korea, Germany, Britain, Australia, Southeast Asia and other countries
+							and regions. We rely on good quality and service to win the majority of customers.</p>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -294,7 +266,6 @@
 						<!--/tab_one-->
 						<div class="tab1">
 							<div class="tab-info">
-
 								<div class="address">
 									<div class="col-md-4 address-grid-w3ls-agile">
 										<div class="address-left">
@@ -309,7 +280,6 @@
 										<div class="address-right">
 											<h6>Phone Number</h6>
 											<p href="tel:+86 15353003509">+86 15353003509</p>
-
 										</div>
 										<div class="clearfix"> </div>
 									</div>
@@ -346,44 +316,10 @@
 										</div>
 										<div class="clearfix"> </div>
 									</div>
-									<div class="clearfix"> </div>
 								</div>
 							</div>
 						</div>
-						<!--//tab_one-->
-						<!-- <div class="tab2">
-
-							<div class="tab-info">
-								<div class="contact_grid_right">
-									<h6>Please fill this form to contact with us.</h6>
-									<form action="#" method="post">
-										<div class="contact_left_grid">
-											<input type="text" name="Name" placeholder="Name" required="">
-											<input type="email" name="Email" placeholder="Email" required="">
-
-											<input type="text" name="Telephone" placeholder="Telephone" required="">
-											<input type="text" name="Subject" placeholder="Subject" required="">
-											<textarea name="Message" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message...';}" required="">Message...</textarea>
-											<input type="submit" value="Submit">
-											<input type="reset" value="Clear">
-											<div class="clearfix"> </div>
-										</div>
-									</form>
-								</div>
-							</div>
-						</div> -->
-						<!--//tab_two-->
-						<!-- <div class="tab3">
-
-							<div class="tab-info">
-								<div class="contact-map-wthree-agileits">
-
-									<iframe src=""
-									    class="map" style="border:0" allowfullscreen=""></iframe>
-								</div>
-
-							</div>
-						</div> -->
+						
 						<div class="clearfix"> </div>
 					</div>
 				</div>
@@ -549,30 +485,27 @@
 				pictures
 			} = d
 			let titleDom = `<h3 class="tittle_w3ls mt48">${title}</h3>`
-			let arr = []
-			while (pictures.length) {
-				arr.push(pictures.splice(0, 3))
-			}
-			let sectionDom = arr.map(list => {
-				let s = '<div class="">'
-				list.forEach(p => {
-					s += `
-					<div class="col-md-4 col-sm-4 col-xs-4 gal-sec gallery-grid1">
-						<a title="100% Satisfaction." href="${p.src}">
-							<img src="${p.src}" alt=" " class="img-responsive" />
-							<div class="p-mask">
-							<h4>${p.title || ''}</h4>
-								<p>${p.description || ''}</p>
-							</div>
-						</a>
-					</div>
-					`
-				})
-				s += '</div>'
-				return s
+			// let arr = []
+			// while (pictures.length) {
+			// 	arr.push(pictures.splice(0, 3))
+			// }
+			let s = '<div class="product-section">'
+			let sectionDom = pictures.map(p => {
+				s += `
+				<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 gal-sec gallery-grid1">
+					<a class="gal-inner gal-holder" title="100% Satisfaction." href="${p.src}">
+						<img src="${p.src}" alt=" " class="img-product img-responsive" />
+						<div class="p-mask">
+						<h4>${p.title || ''}</h4>
+							<p>${p.description || ''}</p>
+						</div>
+					</a>
+				</div>
+				`
 			})
+			s += '</div>'
 			const endDom = '<div class="clearfix"></div>'
-			return titleDom + sectionDom.join(' ') + endDom
+			return titleDom + s + endDom
 		})
 		// console.log('part', part)
 		document.getElementById('gallery').innerHTML = part.join(' ')
@@ -608,7 +541,6 @@
 					//左右滑动
 					if (distanceX > 0) {
 						//向右滑动
-						console.log("$('#myCarousel')", $('#myCarousel'))
 						$('#myCarousel').carousel('prev');
 					} else {
 						//向左滑动
