--- a/index.html
+++ b/index.html
@@ -87,46 +87,9 @@
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 				<li data-target="#myCarousel" data-slide-to="1" class=""></li>
-				<li data-target="#myCarousel" data-slide-to="2" class=""></li>
+				<!-- <li data-target="#myCarousel" data-slide-to="2" class=""></li> -->
 			</ol>
-			<div class="carousel-inner" role="listbox">
-				<div class="item item1 active">
-					<div class="container">
-						<img class="banner-img" src="https://pic.imgdb.cn/item/6533e8ccc458853aef10d624.jpg" alt="banner1.jpg">
-						<div class="carousel-caption">
-							<h3>Photo Gallery</h3>
-							<p>Professional Photographer</p>
-							<div class="bnr-button">
-								<a class="act" href="single.html">Read More</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="item item2">
-					<div class="container">
-						<img class="banner-img" src="https://pic.imgdb.cn/item/6533ec77c458853aef212ca3.jpg" alt="banner2.jpg">
-						<div class="carousel-caption">
-							<h3>Landscape Photography</h3>
-							<p>Your image is our focus</p>
-							<div class="bnr-button">
-								<a class="act" href="single.html">Read More</a>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="item item3">
-					<div class="container">
-						<img class="banner-img" src="https://pic.imgdb.cn/item/6533ec91c458853aef219501.jpg" alt="banner3.jpg">
-						<div class="carousel-caption">
-							<h3>Wedding Photography</h3>
-							<p>Professional Photographer</p>
-							<div class="bnr-button">
-								<a class="act" href="single.html">Read More</a>
-							</div>
-
-						</div>
-					</div>
-				</div>
+			<div id="banners" class="carousel-inner" role="listbox">
 			</div>
 			<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
 				<span class="fa fa-chevron-left" aria-hidden="true"></span>
@@ -146,7 +109,7 @@
 		<div class="container">
 			<h3 class="tittle_w3ls">About Us</h3>
 			<div class="inner_sec_info_agile_w3_info">
-				<div class="help_full full-bg">
+				<!-- <div class="help_full full-bg">
 					<ul class="rslides" id="slider4">
 						<li>
 							<div class="respon_info_img">
@@ -158,30 +121,62 @@
 								<img src="images/banner2.jpg" class="img-responsive" alt="PhotoCall">
 							</div>
 						</li>
-						<li>
-							<div class="respon_info_img">
-								<img src="images/banner1.jpg" class="img-responsive" alt="PhotoCall">
-							</div>
-						</li>
 					</ul>
-					<div class="banner_bottom_left">
-						<!-- <h4>Wedding Photography</h4> -->
-						<p>Baoji Longda Jiaye Industry and Trade Co., Ltd. was established in 2019 and is located in Baoji City,
-							Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has
-							developed into an innovative enterprise integrating production and trade. The company specializes in
-							the production of titanium alloy materials and tungsten, molybdenum, tantalum, niobium, nickel,
-							zirconium and other rare metals. Our products include bar, plate, pipe, wire, powder, foil, fasteners
-							and customized machining parts. According to GB/T, ASTM/B, ASME SB, AMS, DIN, JIS and other standards
-							of processing. The products are widely used in aerospace, medical equipment, automobile, metallurgy,
-							electronics, ceramics and petrochemical industries. Products have been exported to the United States,
-							Canada, Brazil, Japan, South Korea, Germany, Britain, Australia, Southeast Asia and other countries
-							and regions. We rely on good quality and service to win the majority of customers.</p>
-					</div>
+				</div> -->
+				<div class="about-bg">
+					<img src="https://pic.imgdb.cn/item/654f6e77c458853aef12bfdf.jpg" class="about-img">
+				</div>
+				<div class="banner_bottom_left">
+					<!-- <h4>Wedding Photography</h4> -->
+					<p class="about-content">Baoji Longda Jiaye Industry and Trade Co., Ltd. is located in Baoji City, Shanxi Province, Titanium Valley, China. Relying on the local geographical advantages, the company has developed into an innovative enterprise integrating production and trade. </p>
+					<p class="about-content">The company specializes in the production of titanium materials and tungsten, molybdenum, tantalum and other rare metals. Our products include bar, plate, pipe, wire,fasteners and customized machining parts. The products are widely used in aerospace, medical equipment, automobile, metallurgy, electronics, ceramics and petrochemical industries. </p>
+					<p class="about-content">Products have been exported all over the world. We rely on good quality and service to win the majority of customers.</p>
 				</div>
 			</div>
 		</div>
 	</div>
 	<!--//ab-->
+
+	<!--来访图-->
+	<div class="price-sec" id="visit">
+		<div class="container">
+			<h3 class="tittle_w3ls cen">International Customers Visit</h3>
+			<p class="visit-description">With the rapid development of the company and the continuous innovation of research and development technology, Longda Jiaye is also expanding the international market. Foreign customers have investigated the company's strength, product production process, and understood the company's strength, development planning and product sales.</p>
+			<p class="visit-description">Excellent technology and service can be recognized by customers. Good products and good services are the most powerful marketing tools.</p>
+			<div id="visit" class="inner_sec_info_agile_w3_info">
+				<div class="top-line">
+					<div class="flex1 visit-grid">
+						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/654f847bc458853aef75a38f.jpg">
+							<img src="https://pic.imgdb.cn/item/654f847bc458853aef75a38f.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+					<div class="flex1 visit-grid">
+						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/654f847bc458853aef75a230.jpg">
+							<img src="https://pic.imgdb.cn/item/654f847bc458853aef75a230.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</div>
+				<div class="end-line">
+					<div class="flex1 visit-grid">
+						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/654f847bc458853aef759ff4.jpg">
+							<img src="https://pic.imgdb.cn/item/654f847bc458853aef759ff4.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+					<div class="flex2 visit-grid">
+						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/654f84dfc458853aef77b86b.jpg">
+							<img src="https://pic.imgdb.cn/item/654f84dfc458853aef77b86b.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+					<div class="flex1 visit-grid">
+						<a title="100% Satisfaction." href="https://pic.imgdb.cn/item/654f847bc458853aef75a400.jpg">
+							<img src="https://pic.imgdb.cn/item/654f847bc458853aef75a400.jpg" class="img-responsive" alt="">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="clearfix"></div>
+	</div>
 
 	<!--优势 what-->
 	<div class="works" id="services">
@@ -189,7 +184,7 @@
 			<h3 class="tittle_w3ls cen">Why Choose Us</h3>
 			<div class="inner_sec_info_agile_w3_info">
 				<div class="ser-first">
-					<div class="col-md-3 ser-first-grid text-center">
+					<div class="col-md-4 ser-first-grid text-center">
 						<div class="dodecagon">
 							<div class="dodecagon-in">
 								<div class="dodecagon-bg">
@@ -197,10 +192,10 @@
 								</div>
 							</div>
 						</div>
-						<h3>Unique Design</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+						<h3>Effective customer service</h3>
+						<p>24 hours customer service team with the goal for development long-term business relationships with all of our clients.</p>
 					</div>
-					<div class="col-md-3 ser-first-grid text-center">
+					<div class="col-md-4 ser-first-grid text-center">
 						<div class="dodecagon">
 							<div class="dodecagon-in">
 								<div class="dodecagon-bg">
@@ -208,10 +203,10 @@
 								</div>
 							</div>
 						</div>
-						<h3>Different Layout</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+						<h3>Professional team</h3>
+						<p>Strong and competitive development team including top engineers and skillful staffs work together.</p>
 					</div>
-					<div class="col-md-3 ser-first-grid text-center">
+					<div class="col-md-4 ser-first-grid text-center">
 						<div class="dodecagon">
 							<div class="dodecagon-in">
 								<div class="dodecagon-bg">
@@ -219,28 +214,15 @@
 								</div>
 							</div>
 						</div>
-						<h3>Portfolio Styles</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-					</div>
-					<div class="col-md-3 ser-first-grid text-center">
-						<div class="dodecagon">
-							<div class="dodecagon-in">
-								<div class="dodecagon-bg">
-									<span class="far fa-user" aria-hidden="true"></span>
-								</div>
-							</div>
-						</div>
-						<h3>User Experience</h3>
-						<p>Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+						<h3>Excellent products</h3>
+						<p>Our products help clients to be competitive while providing the high quality goods and maximizing their potential profit.</p>
 					</div>
 					<div class="clearfix"></div>
 				</div>
 			</div>
-
 		</div>
 	</div>
 	<!--//what-->
-	<!-- 人员介绍 teamers-->
 
 	<!-- 产品介绍 -->
 	<div class="gallery_sec" id="gallery">
@@ -435,15 +417,6 @@
 	</script>
 	<!--// script for responsive tabs -->
 
-	<!--gallery -->
-	<script src="js/jquery.chocolat.js"></script>
-	<!--light-box-files -->
-	<script type="text/javascript">
-		$(function () {
-			$('.gallery-grid1 a').Chocolat();
-		});
-	</script>
-	<!-- //gallery -->
 	<!-- Smooth-Scrolling-JavaScript -->
 	<script type="text/javascript" src="js/easing.js"></script>
 	<script type="text/javascript" src="js/move-top.js"></script>
@@ -479,6 +452,29 @@
 	</script>
 	<script src="./js/pictures.js"></script>
 	<script>
+		let banners = bannersDto.map( (i, index)=> {
+			return `
+			<div class="item item${index +1} ${index === 0 ? 'active' : ''}">
+				<div class="container">
+					<img class="banner-img" src="${i.src}" alt="banner.jpg">
+					<div class="carousel-caption">
+						<h3>${i.title || ''}</h3>
+						<p>${i.description || ''}</p>
+						<div class="bnr-button">
+							<a class="act" href="${i.link || ''}">Read More</a>
+						</div>
+					</div>
+				</div>
+			</div>`
+		})
+		document.getElementById('banners').innerHTML = banners.join('')
+
+		// let visits = visitsDto.map( (i, index)=> {
+		// 	return `
+		// 	`
+		// })
+		// document.getElementById('visit').innerHTML = visits.join('')
+
 		let part = dto.map(d => {
 			const {
 				title,
@@ -492,11 +488,11 @@
 			let s = '<div class="product-section">'
 			let sectionDom = pictures.map(p => {
 				s += `
-				<div class="col-lg-2 col-md-3 col-sm-4 col-xs-6 gal-sec gallery-grid1">
+				<div class="col-lg-3 col-md-4 col-sm-4 col-xs-6 gal-sec gallery-grid1">
 					<a class="gal-inner gal-holder" title="100% Satisfaction." href="${p.src}">
 						<img src="${p.src}" alt=" " class="img-product img-responsive" />
 						<div class="p-mask">
-						<h4>${p.title || ''}</h4>
+							<h4>${p.title || ''}</h4>
 							<p>${p.description || ''}</p>
 						</div>
 					</a>
@@ -515,6 +511,15 @@
 	<a href="#home" class="scroll" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;">
 		</span></a>
 
+	<!--gallery -->
+	<script src="js/jquery.chocolat.js"></script>
+	<!--light-box-files -->
+	<script type="text/javascript">
+		$(function () {
+			$('.gallery-grid1 a').Chocolat();
+		});
+	</script>
+	<!-- //gallery -->
 
 	<script>
 		$(function () {
