--- a/index.html
+++ b/index.html
@@ -485,6 +485,7 @@
 				pictures
 			} = d
 			let titleDom = `<h3 class="tittle_w3ls mt48">${title}</h3>`
+			let subDescription = `<p class="tittle_description">${description}</p>`
 			let s = '<div class="product-section">'
 			let sectionDom = pictures.map(p => {
 				s += `
