--- a/index.html
+++ b/index.html
@@ -482,7 +482,8 @@
 		let part = dto.map(d => {
 			const {
 				title,
-				pictures
+				pictures,
+				description
 			} = d
 			let titleDom = `<h3 class="tittle_w3ls mt48">${title}</h3>`
 			let subDescription = `<p class="tittle_description">${description}</p>`
