--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 	
 	<!-- 产品介绍 -->
-	<div class="gallery_sec" id="gallery">
+	<div class="gallery_sec clearfix" id="gallery">
 		<div class="clearfix"></div>
 	</div>
 
@@ -485,7 +485,7 @@
 				pictures,
 				description
 			} = d
-			let titleDom = `<h3 class="tittle_w3ls mt48">${title}</h3>`
+			let titleDom = `<h3 class="tittle_w3ls">${title}</h3>`
 			let subDescription = `<p class="tittle_description">${description}</p>`
 			let s = '<div class="product-section">'
 			let sectionDom = pictures.map(p => {
