增加收藏夹图标

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<!--/tags -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="Baoji Longda Jiaye Industry and Trade Co.,LTD, " />
 	<script type="application/x-javascript">
 		addEventListener("load", function () {
 			setTimeout(hideURLbar, 0);
@@ -23,6 +23,9 @@
 	<link href="css/chocolat.css" rel="stylesheet" type="text/css" media="screen">
 	<link href="css/easy-responsive-tabs.css" rel='stylesheet' type='text/css' />
 	<link href="css/fontawesome-all.css" rel="stylesheet">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="apple-touch-icon" href="images/favicon.ico" sizes="32x32">
+	<link rel="icon" type="image/png" href="images/favicon.ico" sizes="32x32">
 	<!-- //for bootstrap working -->
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800"
 		rel="stylesheet">
