--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 	<!-- 轮播 banner -->
 	<div class="banner_top">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
+		<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="3000">
 			<!-- Indicators -->
 			<ol id="bannersIndicators" class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
